Fixed auto scrolling issue, added enter key to submit form, aligned buttons properly
Also refactored constatnts into separate file, On clear intro message is preserved

--- a/web/src/index.css
+++ b/web/src/index.css
@@ -9,3 +9,7 @@ pre code {
 .message{
     height: 225px;
 }
+
+.remove-border {
+    border: none;
+}
